--- a/portifólio/portifolio.html
+++ b/portifólio/portifolio.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        h1 {
+            font-size: 600%;
+            text-align: center;
+            margin-top: -7%;
+        }
+        h2 {
+            font-size: 200%;
+        }
+        span {
+            display: inline-block;
+            text-align: left;
+            width: 255px;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio</title>
 </head>
-<body>
-    <img scr=""/>
+<body style="background-color: rgb(157, 245, 245);"
+style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+    <img src="img.jpg">
+    <h1>Cauã Ghiraldi Silva </h1>
+    <h2><span>Endereço:</span> Rua das Limeiras, Jardim das Itaúbas, 418, SINOP-MT</h2>
+    <h2><span>Contato:</span> (66) 99934-9541</h2>
+    <h2><span>Formação:</span> Cursando Engenharia de Computação</h2>
+    <h2><span>Experiencias Profissionais:</span> Aos domingos, sou sonoplasta no programa Mato-Grosso dá Sorte</h2>
+    <h2><span>Habilidades Técnicas:</span> Comecei o aprendizado de Python, HTML e CSS</h2>
+    <h2><span>Habilidades Comportamentais:</span> Responsabilidade, Perseverança, Aprendizado</h2>
+    <h2><span>Redes Sociais</span> Instagram: cauaghiraldi</h2>
 </body>
 </html>
