--- a/portifólio/portifolio.html
+++ b/portifólio/portifolio.html
@@ -13,7 +13,7 @@
         span {
             display: inline-block;
             text-align: left;
-            width: 255px;
+            width: 100%;
         }
     </style>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
 </head>
 <body style="background-color: rgb(157, 245, 245);"
 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-    <img src="img.jpg">
+    <img src="img.jpeg" width="15%" height="15%">
     <h1>Cauã Ghiraldi Silva </h1>
     <h2><span>Endereço:</span> Rua das Limeiras, Jardim das Itaúbas, 418, SINOP-MT</h2>
     <h2><span>Contato:</span> (66) 99934-9541</h2>
