--- a/portifólio/portifolio.html
+++ b/portifólio/portifolio.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <style>
+        .rounded-image {
+            border-radius: 50%;
+            object-fit: cover;
+            width: 30%;
+            height: 40%;
+        }
         h1 {
             font-size: 600%;
             text-align: center;
-            margin-top: -7%;
+            margin-top: -10%;
         }
         h2 {
             font-size: 200%;
@@ -13,7 +19,7 @@
         span {
             display: inline-block;
             text-align: left;
-            width: 255px;
+            width: 255%;
         }
     </style>
     <meta charset="UTF-8">
@@ -22,7 +28,7 @@
 </head>
 <body style="background-color: rgb(157, 245, 245);"
 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-    <img src="img.jpg">
+    <img src="img.jpg" class="rounded-image">
     <h1>Cauã Ghiraldi Silva </h1>
     <h2><span>Endereço:</span> Rua das Limeiras, Jardim das Itaúbas, 418, SINOP-MT</h2>
     <h2><span>Contato:</span> (66) 99934-9541</h2>
