--- a/portifólio/portifolio.html
+++ b/portifólio/portifolio.html
@@ -2,16 +2,10 @@
 <html lang="en">
 <head>
     <style>
-        .rounded-image {
-            border-radius: 50%;
-            object-fit: cover;
-            width: 30%;
-            height: 40%;
-        }
         h1 {
             font-size: 600%;
             text-align: center;
-            margin-top: -10%;
+            margin-top: -7%;
         }
         h2 {
             font-size: 200%;
@@ -19,11 +13,7 @@
         span {
             display: inline-block;
             text-align: left;
-<<<<<<< HEAD
-            width: 255%;
-=======
             width: 100%;
->>>>>>> 85e93c39345a03d1ddf6a586561a56351e8d8cb1
         }
     </style>
     <meta charset="UTF-8">
@@ -32,11 +22,7 @@
 </head>
 <body style="background-color: rgb(157, 245, 245);"
 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-<<<<<<< HEAD
-    <img src="img.jpg" class="rounded-image">
-=======
     <img src="img.jpeg" width="15%" height="15%">
->>>>>>> 85e93c39345a03d1ddf6a586561a56351e8d8cb1
     <h1>Cauã Ghiraldi Silva </h1>
     <h2><span>Endereço:</span> Rua das Limeiras, Jardim das Itaúbas, 418, SINOP-MT</h2>
     <h2><span>Contato:</span> (66) 99934-9541</h2>
@@ -44,6 +30,6 @@ style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     <h2><span>Experiencias Profissionais:</span> Aos domingos, sou sonoplasta no programa Mato-Grosso dá Sorte</h2>
     <h2><span>Habilidades Técnicas:</span> Comecei o aprendizado de Python, HTML e CSS</h2>
     <h2><span>Habilidades Comportamentais:</span> Responsabilidade, Perseverança, Aprendizado</h2>
-    <h2><span>Redes Sociais</span> Instagram: cauaghiraldi</h2>
+    <h2><span>Redes Sociais:</span> Instagram: cauaghiraldi</h2>
 </body>
 </html>
